chore: configure logging and update dependencies
- Add SLF4J Simple Logger for basic console logging.
- Set default log level to debug and configure output format.
- Update Model Context Protocol (MCP) Kotlin SDK to version 0.8.4.
- Exclude duplicate files during JAR assembly.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,14 @@
 [versions]
 kotlin = "2.2.20"
-mcpKotlinSdk = "0.7.3"
+mcpKotlinSdk = "0.8.4"
 kotlinxCoroutines = "1.10.2"
+slf4jSimple = "2.0.9"
 
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 mcp-kotlin-sdk = { module = "io.modelcontextprotocol:kotlin-sdk", version.ref = "mcpKotlinSdk" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4jSimple" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
